--- a/main.css
+++ b/main.css
@@ -28,6 +28,21 @@ header {
 header .logo__container {
   align-items: center;
 }
+@media screen and (max-width: 899px) {
+  header .logo__container {
+    width: 100%;
+  }
+  header .logo__container .hamburger__pic {
+    display: block;
+    margin-top: 0.5rem;
+    margin-right: 0.5rem;
+    background-image: url(hamburger.png);
+    float: right;
+    width: 51px;
+    height: 32px;
+    cursor: pointer;
+  }
+}
 header .logo {
   transform: translateY(0.1rem);
   width: 6rem;
@@ -53,7 +68,7 @@ header .menu__container {
     display: none;
   }
 }
-header .menu__container .menu ul {
+header .menu__container .menu {
   display: flex;
   justify-content: space-evenly;
   list-style: none;
@@ -61,8 +76,11 @@ header .menu__container .menu ul {
   margin: 0;
   width: 100%;
 }
-header .menu__container .menu ul a {
+header .menu__container .menu a {
   color: white;
+}
+header .menu__container .menu a:hover {
+  color: #8ACFE5;
 }
 @media screen and (min-width: 500px) and (max-width: 899px) {
   header .logo__container {
@@ -81,9 +99,6 @@ header .menu__container .menu ul a {
     line-height: 1.5rem;
     padding-top: 15px;
     padding-bottom: 5px;
-  }
-  header .menu__container {
-    display: none;
   }
   header .menu__container {
     display: none;
