--- a/src/main.scss
+++ b/src/main.scss
@@ -27,6 +27,20 @@ header {
 
   .logo__container {
     align-items: center;
+
+    @media screen and (max-width: 899px) {
+      width: 100%;
+      .hamburger__pic {
+        display: block;
+        margin-top: 0.5rem;
+        margin-right: 0.5rem;
+        background-image: url(hamburger.png);
+        float: right;
+        width: 51px;
+        height: 32px;
+        cursor: pointer;
+      }
+    }
   }
 
   .logo {
@@ -56,7 +70,7 @@ header {
       display: none;
     }
 
-    .menu ul {
+    .menu {
       display: flex;
       justify-content: space-evenly;
       list-style: none;
@@ -67,8 +81,13 @@ header {
       a {
         color: white;
       }
+
+      a:hover {
+        color: #8ACFE5;
+      }
     }
   }
+
 
   @media screen and (min-width: 500px) and (max-width: 899px) {
     .logo__container {
@@ -89,10 +108,6 @@ header {
       line-height: 1.5rem;
       padding-top: 15px;
       padding-bottom: 5px;
-    }
-
-    .menu__container {
-      display: none;
     }
 
     .menu__container {
