--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
   text-decoration: none;
 }
@@ -29,6 +29,7 @@ header .logo__container {
   width: 100%;
   align-items: center;
 }
+
 header .logo {
   transform: translateY(0.1rem);
   width: 6rem;
@@ -345,7 +346,9 @@ header span {
 .popular__challenges .boxes .box {
   height: auto;
   border-radius: 6px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   background-color: white;
 }
 @media screen and (max-width: 900px) {
